<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fill_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bbobbo216.chicagocabfareapp.FillInfo">

    <Spinner
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/car_group"
        android:entries="@array/car_group"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:scrollbarSize="20dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/calculate"
        android:layout_width="300dp"
        android:id="@+id/calculate"
        android:textAlignment="center"
        tools:text="@string/calculate"
        android:textSize="30sp"
        android:layout_height="70dp"
        android:textColor="@android:color/white"
        android:background="@android:color/black"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/car_group"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/cab_grabber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/title"
        android:textSize="60dp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/miles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="@string/miles"
        android:textSize="30sp"
        android:layout_alignBaseline="@+id/mileage"
        android:layout_alignBottom="@+id/mileage"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/mileage"
        android:textSize="30sp"
        android:hint="@string/Milage"
        android:textAlignment="center"
        android:layout_marginTop="17dp"
        android:layout_width="250dp"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <TextView
        android:text="@string/note"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:text="@string/note"
        android:textSize="16sp"
        android:layout_width="300dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/mileage"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result1"
        android:textSize="24sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/calculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/result2"
        android:textSize="34sp"
        android:layout_below="@+id/result1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center" />
</RelativeLayout>
